--- a/EntityFramework_CodeFirst_Drinks/EntityFramework_CodeFirst_Drinks.csproj
+++ b/EntityFramework_CodeFirst_Drinks/EntityFramework_CodeFirst_Drinks.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Cocktail.cs" />
     <Compile Include="CocktailContext.cs" />
     <Compile Include="Container.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="Ingredient.cs" />
     <Compile Include="Procedure.cs" />
     <Compile Include="Unit.cs" />
